Changement des couleurs de l'header

--- a/templates/contact/new.html.twig
+++ b/templates/contact/new.html.twig
@@ -3,7 +3,8 @@
 {% block title %}New Contact{% endblock %}
 
 {% block body %}
-    <h1>Create new Contact</h1>
-
-    {{ include('contact/_form.html.twig') }}
+    <h1>Contactez-vous</h1>
+    <div id="content">
+        {{ include('contact/_form.html.twig') }}
+    </div>
 {% endblock %}
