--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Article index{% endblock %}
 
 {% block body %}
-    <h1>Article index</h1>
+    <h1>Gestion des articles</h1>
 
     <table class="table">
         <thead>
@@ -37,9 +37,8 @@
                 <td colspan="7">no records found</td>
             </tr>
         {% endfor %}
-        {{ knp_pagination_render(articles) }}
         </tbody>
     </table>
-
     <button type="button" class="btn btn-success"><a href="{{ path('admin_article_new') }}">Créer un nouvel article</a></button>
+    {{ knp_pagination_render(articles) }}
 {% endblock %}
