--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
     <body>
         <header>
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="/">ApexUnite</a>
                     <div class="collapse navbar-collapse" id="navbarColor03">
@@ -53,12 +53,13 @@
                                         <a class="dropdown-item" href="{{ path('admin_article_index') }}">Gestion des articles</a>
                                         <a class="dropdown-item" href="{{ path('admin_tag_index') }}">Gestion des tags</a>
                                         <a class="dropdown-item" href="{{ path('admin_type_index') }}">Gestion des types</a>
+                                        <a class="dropdown-item" href="{{ path('admin_world_record_index') }}">Gestion des Worldrecords</a>
                                     </div>
                                 </li>
                             {% endif %}
 
-                            <li class="nav-item"><a class="nav-link" href="{{ path('contact') }}">contact</a></li>
-
+                            <li class="nav-item"><a class="nav-link" href="{{ path('world_record_index') }}">World record</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ path('contact') }}">Contact</a></li>
                             {% if app.user %}
                                 <li class="nav-link">Bonjour, {{ app.user.username }}</li>
                                 <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a></li>
@@ -79,12 +80,31 @@
 <script src="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
 <script src="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js"></script>
 <style>
-    #articles,#videos{
-        display: flex;
-        flex-direction: row;
+    #content{
+        margin: 20px;
     }
     #videos div, #articles div{
         min-width: 300px;
-        margin:10px;
+    }
+
+    #articles{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    a{
+        text-decoration: none;
+    }
+    #information{
+        display: flex;
+        flex-direction: row;
+    }
+    #information div{
+        margin-right: 20px;
+    }
+    #articles a{
+        color:gainsboro;
     }
 </style>
