--- a/templates/gv_index/article_show.html.twig
+++ b/templates/gv_index/article_show.html.twig
@@ -3,63 +3,41 @@
 {% block title %}Article{% endblock %}
 
 {% block body %}
-    <h1>Article</h1>
+    <h1>{{ article.titre }}</h1>
+    <div id="content">
+        <img src="{{ article.image }}">
+        <p>Créé par {{ article.auteur }} le {{ article.createdAt ? article.createdAt|date('Y-m-d H:i:s') : '' }}</p>
+        <span class="badge bg-primary">Tags : {{ article.tags }}</span>
+        <h5>Contenu</h5>
+        <p>{{ article.contenu | raw }}</p>
 
-    <table class="table">
-        <tbody>
-        <tr>
-            <th>Id</th>
-            <td>{{ article.id }}</td>
-        </tr>
-        <tr>
-            <th>Titre</th>
-            <td>{{ article.titre }}</td>
-        </tr>
-        <tr>
-            <th>Contenu</th>
-            <td>{{ article.contenu | raw }}</td>
-        </tr>
-        <tr>
-            <th>CreatedAt</th>
-            <td>{{ article.createdAt ? article.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-        </tr>
-        <tr>
-            <th>Auteur</th>
-            <td>{{ article.auteur }}</td>
-        </tr>
-        <tr>
-            <th>Image</th>
-            <td><img src="{{ article.image }}"></td>
-        </tr>
-        </tbody>
-    </table>
+        <div class="div.grix.xs2.sm3.gutter-0">
+            <div class="col-xs2 col-sm3">
+                <h5>Liste des commentaires</h5>
+                {% for comment in article.comments %}
+                    {% if comment.parent == null %}
+                        <p>Publié par {{ comment.nickname }} le {{ comment.createdAt|date("d/m/y H:i") }}</p>
+                        <div>{{ comment.content | raw }}</div>
+                        {# <p><a href="#ajout-commentaire" data-reply data-id="{{ comment.id }}">Répondre</a></p> #}
 
-    <div class="div.grix.xs2.sm3.gutter-0">
-        <div class="col-xs2 col-sm3">
-            <h2>Liste des commentaires</h2>
-            {% for comment in article.comments %}
-                {% if comment.parent == null %}
-                    <p>Publié par {{ comment.nickname }} le {{ comment.createdAt|date("d/m/y H:i") }}</p>
-                    <div>{{ comment.content | raw }}</div>
-                    {# <p><a href="#ajout-commentaire" data-reply data-id="{{ comment.id }}">Répondre</a></p> #}
-
-                    {# On affiche les réponses #}
-                    {% for reply in comment.replies %}
-                        <p>Reponse publiée par {{ reply.nickname }} le {{ reply.createdAt|date("d/m/y H:i") }}</p>
-                        <div>{{ reply.content | raw }}</div>
-                    {% endfor %}
-                {% endif %}
-            {% endfor %}
+                        {# On affiche les réponses #}
+                        {% for reply in comment.replies %}
+                            <p>Reponse publiée par {{ reply.nickname }} le {{ reply.createdAt|date("d/m/y H:i") }}</p>
+                            <div>{{ reply.content | raw }}</div>
+                        {% endfor %}
+                    {% endif %}
+                {% endfor %}
+            </div>
         </div>
-    </div>
-    <div class="div.grix.xs2.sm3.gutter-0">
-        <div class="col-xs2 col-sm3" id="ajout-commentaire">
-            <h2>Ajouter un commentaire</h2>
-            {{ form(commentForm) }}
+        <div class="div.grix.xs2.sm3.gutter-0">
+            <div class="col-xs2 col-sm3" id="ajout-commentaire">
+                <h5>Ajouter un commentaire</h5>
+                {{ form(commentForm) }}
+            </div>
         </div>
-    </div>
 
-    <a href="{{ path('article_index') }}">back to list</a>
+        <a href="{{ path('article_index') }}">Retour à la liste</a>
+    </div>
 
 {% endblock %}
 
