--- a/templates/gv_index/video_show.html.twig
+++ b/templates/gv_index/video_show.html.twig
@@ -3,37 +3,15 @@
 {% block title %}Video{% endblock %}
 
 {% block body %}
-    <h1>Video</h1>
+    <h1>{{ video.titre }}</h1>
+    <div id="content">
+        <iframe width="900" height="506" src="{{ video.lien }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>Posté le {{ video.postedAt ? video.postedAt|date('Y-m-d H:i:s') : '' }} par {{ video.auteur }}</p>
+        <span class="badge bg-primary">Tags : {{ video.tags }}</span>
+        <h5>Description</h5>
+        <p>{{ video.description | raw }}</p>
 
-    <table class="table">
-        <tbody>
-        <tr>
-            <th>Id</th>
-            <td>{{ video.id }}</td>
-        </tr>
-        <tr>
-            <th>Titre</th>
-            <td>{{ video.titre }}</td>
-        </tr>
-        <tr>
-            <th>Lien</th>
-            <iframe width="900" height="506" src="{{ video.lien }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </tr>
-        <tr>
-            <th>PostedAt</th>
-            <td>{{ video.postedAt ? video.postedAt|date('Y-m-d H:i:s') : '' }}</td>
-        </tr>
-        <tr>
-            <th>Auteur</th>
-            <td>{{ video.auteur }}</td>
-        </tr>
-        <tr>
-            <th>Description</th>
-            <td>{{ video.description | raw }}</td>
-        </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('video_index') }}">back to list</a>
+        <a href="{{ path('video_index') }}">Retour à la liste</a>
+    </div>
 
 {% endblock %}
