--- a/templates/gv_index/article_show.html.twig
+++ b/templates/gv_index/article_show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>{{ article.titre }}</h1>
     <div id="content">
-        <img src="{{ article.image }}">
+        <img src="{{ asset(article.image) | imagine_filter('article') }}" alt="image">
         <p>Créé par {{ article.auteur }} le {{ article.createdAt ? article.createdAt|date('Y-m-d H:i:s') : '' }}</p>
         <span class="badge bg-primary">Tags : {{ article.tags }}</span>
         <h5>Contenu</h5>
@@ -36,6 +36,21 @@
             </div>
         </div>
 
+        <div id="fb-root"></div>
+        <script>(function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+
+        <!-- Your share button code -->
+        <div class="fb-share-button"
+             data-href="https://www.sf.m3104.villevy.com/article/"
+             data-layout="button_count">
+        </div>
         <a href="{{ path('article_index') }}">Retour à la liste</a>
     </div>
 
