Ajout du filtre imaginebundle sur images articles/videos index

--- a/templates/contact/new.html.twig
+++ b/templates/contact/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Contact{% endblock %}
 
 {% block body %}
-    <h1>Contactez-vous</h1>
+    <h1>Contactez-nous</h1>
     <div id="content">
         {{ include('contact/_form.html.twig') }}
     </div>
